[package]
name = "omnisor"
version = "0.1.2"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
description = "Omnisor is an asynchronous high-level SSH client library for Rust, with specialized support for network devices."
keywords = ["async", "ssh-client", "high-level", "networking"]
repository = "https://github.com/ValdonVitija/omnisor"
categories = ["network-programming"]
authors = ["Valdon Vitija <valdonvitijaa@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
openssl = []

[dependencies]
russh = "0.55.0"
log = "0.4"
russh-sftp = "2.1.1"
thiserror = "2.0.17"
tokio = { version = "1.45.1", features = ["fs"] }
regex = "1.12.2"

[dev-dependencies]
dotenv = "0.15.0"
